--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,21 +23,34 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 72px;
 }
 
 nav ul {
     display: flex;
+    height: 70px;
 }
 
 nav .logo {
-    position: absolute;
-    width: 300px;
-    height: 100px;
-    left: 95px;
-    top: 51px;
+    height: auto;
 }
+
+nav .logo #logo{
+}
+
+nav .nav-items{
+    position: relative;
+    right:0;
+}
+
 .nav-items li {
     list-style: none;
     margin-right: 100px;
+}
+
+.nav-items li:hover{
+
+}
+.nav-items li.nav-item-active {
+    background: url('../img/strzalka.png') no-repeat right top;
+    padding-right: 15px;
 }
