--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,3 +68,21 @@ nav .nav-items{
     width: 33.05%;
     vertical-align: middle;
 }
+
+div.slogan {
+  width:40%;
+  height:80px;
+  background-color:white;
+  padding:15px;
+  font-size:1.2em;
+  transition:width 1s linear 3s, background-color 3s ease-in 0s;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 3px;
+}
+
+div.slogan:hover {
+  width:80%;
+  background-color:#C4C4C4;
+  vertical-align: middle;
+}
